- overhauled NPC spawn system
- added loading of spawn pools and implemented them for NPCs (GOs will follow soon)