@@ -76,7 +76,7 @@ namespace WCell.Addons.Default.Spells.Paladin
 
 				// Custom proc (target = the one who is blessed): 
 				// "When the target blocks, parries, or dodges a melee attack the target will gain $57319s1% of maximum displayed mana."
-				spell.AddProcHandler(new TriggerSpellProcHandler(
+				spell.AddProcHandler(new TriggerSpellProcHandlerTemplate(
 					ProcTriggerFlags.MeleeHitOther | ProcTriggerFlags.RangedHitOther,
 					ProcHandler.DodgeBlockOrParryValidator,
 					SpellHandler.Get(SpellId.BlessingOfSanctuary)
